Fixed hotels image box not showing if no thumbnails are available

--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -7,6 +7,8 @@
 .list-hotel-box .list-image {
   width: 29%;
   float: left;
+  min-height: 185px;
+  background-color: #f0f1f3;
 }
 .list-hotel-box .list-content {
   float: left;
